src/app/components/moonbase/landing/landing-intro/landing-intro.component.scss
@import "includes";
section.landing-intro {
    display: flex;
    flex-direction: row;
    max-width: 810px;
    margin-top: 160px; //90px;
    margin-right: 20px;
    margin-left: 20px;
    justify-content: center;
    align-items: center;
    position: relative;
    z-index: 0;
}

.landing-into-nft-image-container-mobile {
    display: none;
}

.landing-into-nft-image-container {
    position: relative;
    margin-left: -75px;
    .nft-image {
        position: relative;
        max-width: 470px;
        max-height: 470px;
        min-width: 232px;
        background: black;
        width: 100%;
        height: 100%;
        z-index: 0;
    }
}

.info {
    flex: none;
    max-width: 370px;
    border-top: 3px solid $primary;
    margin-top: 80px;
    position: relative;
    width: 100%;
    z-index: 1;
    .buttons-container {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        margin-right: 100px;
    }
    .info-text {
        font-family: $primary-font;
        font-size: 16px;
        font-weight: 500;
        line-height: 1.69;
        letter-spacing: normal;
        text-align: left;
        color: $primary;
    }
    .bottom {
        margin-right: 100px;
    }
    .buy-moonshot-button {
        position: relative;
        z-index: 0;
        display: flex;
        width: 170px;
        .button {
            max-width: 170px;
            min-width: 170px;
            width: 100%;
            font-size: 16px;
            height: 40px;
            padding: 0px 15px;
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            font-size: 16px;
            font-weight: bold;
            font-stretch: normal;
            font-style: normal;
            line-height: 1.69;
            letter-spacing: normal;
            text-align: center;
        }
    }
    .arrow-down {
        width: 40px;
        height: 40px;
        .round-mini-button {
            width: 40px;
            height: 40px;
            border-radius: 50%;
        }
    }
}

.stats {
    width: 100%;
    max-width: 75rem;
    min-width: 270px;
    z-index: 90;
    div {
        p {
            color: $secondary;
            font-size: 20px;
            &:first-child {
                color: $primary;
                margin-bottom: 20px;
                font-size: 16px;
            }
        }
    }
}

@media only screen and (max-width: $md-header) {
    section.landing-intro {
        margin-top: 80px;
    }
}

@media only screen and (max-width: 810px) {
    section.landing-intro {
        flex-direction: column;
        align-items: end;
        margin-top: 80px;
        margin-bottom: 60px;
    }
    .info {
        margin-top: 0px;
    }
    .info-title {
        font-size: 24px;
        //margin-bottom: 30px;
    }
    .info-text {
        font-size: 16px;
    }
    .landing-into-nft-image-container {
        display: none;
    }
    .break-line {
        display: none;
    }
    .arrow-down {
        display: none;
    }
    .landing-into-nft-image-container-mobile {
        display: flex;
        margin-bottom: -45px;
        max-width: 240px;
        .nft-image {
            position: relative;
            max-width: 240px;
            max-height: 240px;
            background: black;
            width: 100%;
            height: 100%;
            z-index: 0;
        }
    }
}

